@@ -2,15 +2,17 @@ package med.voll.api.controller;
 
 import jakarta.transaction.Transactional;
 import jakarta.validation.Valid;
-import med.voll.api.dto.AddressDTO;
 import med.voll.api.dto.DoctorDTO;
+import med.voll.api.dto.DoctorShortDTO;
 import med.voll.api.model.Doctor;
 import med.voll.api.repository.DoctorRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.web.PageableDefault;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/doctors")
@@ -27,24 +29,17 @@ public class DoctorController {
     }
 
     @GetMapping
-    public List<DoctorDTO> findAll() {
+    public List<DoctorDTO> listAll() {
         return doctorRepository.findAll()
                 .stream()
-                .map(doctor -> new DoctorDTO(
-                        doctor.getName(),
-                        doctor.getEmail(),
-                        doctor.getCellphone(),
-                        doctor.getCrm(),
-                        doctor.getSpecialty(),
-                        new AddressDTO(
-                                doctor.getAddress().getStreet(),
-                                doctor.getAddress().getNeighborhood(),
-                                doctor.getAddress().getZipcode(),
-                                doctor.getAddress().getCity(),
-                                doctor.getAddress().getState(),
-                                doctor.getAddress().getComplement(),
-                                doctor.getAddress().getNumber())
-                ))
-                .collect(Collectors.toList());
+                .map(DoctorDTO::new)
+                .toList();
     }
+
+    @GetMapping("/short")
+    public Page<DoctorShortDTO> listAllShort(@PageableDefault(size = 5) Pageable pageable) {
+        return doctorRepository.findAll(pageable)
+                .map(DoctorShortDTO::new);
+    }
+
 }
